src/tests/keep_parsing_0.qd
// TEST: compilation_should_fail 'Попытка деления на ноль'

void _start() of
	word a = 1;
	word A1[a];      // error
	word A2["s"];    // error
	word b = a + A1; // error
	word c = a / 0;  // error
end
